# ddd-pbt-boilerplate

./: .gitignore  AGENTS.md  CLAUDE.md  Claude-AI agent 활용한 DDD와 Property based test 개발 방법론.md  GEMINI.md  README.md  pyproject.toml
.agents/skills/dispatch/: SKILL.md
.agents/skills/doc-sync/: SKILL.md
.agents/skills/domain-scout/: SKILL.md
.agents/skills/impact-tracer/: SKILL.md
.agents/skills/integrity-checker/: SKILL.md
.agents/skills/integrity-checker/scripts/: check_sync.py
.agents/skills/property-extractor/: SKILL.md
.agents/skills/test-router/: SKILL.md
.claude/: settings.json  settings.local.json
.claude/agents/: code-scanner.md  domain-explorer.md
.codex/agents/: code-reviewer.md  tdd-writer.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
docs/: glossary.md  index.md
docs/methodology/: README.md  context-discovery.md  lightweight-ddd.md  orchestrator.md  sub-agent-dispatch.md  test-routing.md
docs/order/: batch.md  money.md  order.md  orderline.md
src/catalog/: __init__.py  order.py  types.py
src/catalog/order/: __init__.py  constraints.py  events.py  glossary.py  models.py  properties.py
src/domain/: __init__.py  events.py  exceptions.py  models.py  services.py
tests/: conftest.py
tests/properties/: test_batch_properties.py  test_money_properties.py  test_orderline_properties.py
tests/unit/: test_order.py
